--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 aockit = "^1.0.2"
+networkx = "^3.4.2"
+matplotlib = "^3.9.3"
 
 
 [build-system]
